config.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 0
static_resources:
  listeners:
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                generate_request_id: false
                http_filters:
                  - name: envoy.filters.http.composite
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                      extension_config:
                        name: envoy.filters.http.composite
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.Composite
                      xds_matcher:
                        matcher_list:
                          matchers:
                            - predicate:
                                single_predicate:
                                  input:
                                    name: request-headers
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                      header_name: ":path"
                                  value_match:
                                    prefix: "/asgi"
                              on_match:
                                action:
                                  name: composite-action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                                    typed_config:
                                      name: pyvoy
                                      typed_config:
                                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                                        dynamic_module_config:
                                          name: pyvoy
                                        filter_config:
                                          "@type": type.googleapis.com/google.protobuf.StringValue
                                          value: '{"app": "tests.apps.asgi.kitchensink", "interface": "asgi", "root_path": "/asgi"}'
                                        filter_name: pyvoy
                                        terminal_filter: true
                            - predicate:
                                single_predicate:
                                  input:
                                    name: request-headers
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                      header_name: ":path"
                                  value_match:
                                    prefix: "/wsgi"
                              on_match:
                                action:
                                  name: composite-action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                                    typed_config:
                                      name: pyvoy
                                      typed_config:
                                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                                        dynamic_module_config:
                                          name: pyvoy
                                        filter_config:
                                          "@type": type.googleapis.com/google.protobuf.StringValue
                                          value: '{"app": "tests.apps.wsgi.kitchensink", "interface": "wsgi", "root_path": "/wsgi"}'
                                        filter_name: pyvoy
                                        terminal_filter: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - domains:
                        - "*"
                      name: local_service
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                            body:
                              inline_string: Not Found
                stat_prefix: ingress_http
      name: listener
